--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,5 +1,5 @@
-<nav>
-  <ul>
+<nav class="navbar .navbar-expand{-sm|-md|-lg|-xl}">
+  <ul class=".navbar-nav">
     <li><a routerLink="/overview" routerLinkActive="active" ariaCurrentWhenActive="page">Overview</a></li>
     <li><a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">login</a></li>
   </ul>
