--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <app-header></app-header>
+  <app-home class="header"></app-home>
+  <app-header class="header"></app-header>
+  <app-user-menu class="header"></app-user-menu>
   <div class="content">
-    <h1>Angular Router App</h1>
-  
     <router-outlet></router-outlet>
   </div>
-  <app-footer></app-footer>
+  <app-footer class="footer"></app-footer>
 </html>
