--- a/src/app/components/login-page/login-page.component.html
+++ b/src/app/components/login-page/login-page.component.html
@@ -1,16 +1,22 @@
 <div>
   <h1>Hi Welcome Back</h1>
-  <h3>Login Here</h3>
   <form>
-    <div>
-    <label for="email">Email</label>
-    <input  required  type="text">
-    <label for="password">Password</label>
-    <input  type="password">
-  </div>
-  <button>Submit</button>
-  <span>Don't have an account?
-    <a routerLink="/signUp">signUp</a>
-  </span>
+    <h3>Login Here</h3>
+      <div class="form-group row">
+        <label for="email" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+          <input required type="text" class="form-control">
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="password" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-10">
+          <input required type="password" class="form-control">
+        </div>
+      </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+    <span>Don't have an account?
+      <a routerLink="/signUp">signUp</a>
+    </span>
   </form>
 </div>
