--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
-* {
-    margin: 0;
-}
 
 html {
     height: 100%;
     body {
         height: 100%;
+    }
+}
+
+
+form {
+    padding: 1rem;
+    border: 2px solid gray;
+    border-radius: .5rem;
+    .form-group {
+        margin: 1rem;
     }
 }
