corrigate right artibute

--- a/src/app/layout/user-menu/user-menu.component.html
+++ b/src/app/layout/user-menu/user-menu.component.html
@@ -1,4 +1,4 @@
-<p *ngIf="user != undefined; else elseBlock">{{user.name}}</p>
+<p *ngIf="user != undefined; else elseBlock">{{user.username}}</p>
 <ng-template #elseBlock>
     <button>Login</button>
 </ng-template>
